# trading-bot-platform

./: README.md  SECURITY.md  pyproject.toml
dashboard/: package.json
data/: pyproject.toml
data/service/helpers/exceptions/: exchange_invalid.py  exchange_required.py
execution/: pyproject.toml
model/: pyproject.toml
