[tool.poetry]
name = "MyCryptoBot"
version = "0.1.0"
description = "Root package management for MyCryptoBot"
authors = ["MyCryptoBot Contributors"]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
python-binance = "^1.0.19"
python-dotenv = "^1.0.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scipy = "^1.11.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
werkzeug = "^3.0.0"
Flask = "^3.0.0"
Flask-Cors = "^4.0.0"
Flask-JWT-Extended = "^4.6.0"
Django = "^4.2.0"
gunicorn = "^21.2.0"
dj-database-url = "^2.1.0"
requests = "^2.31.0"
redis = "^5.0.0"
rq = "^1.15.0"
ta = "^0.11.0"
psycopg2 = "^2.9.9"
apscheduler = "^3.10.4"
plotly = "^5.18.0"
humanfriendly = "^10.0"
progressbar2 = "^4.2.0"
stratestic = "^1.0.0"
boto3 = "^1.34.0"


[tool.poetry.group.dev.dependencies]
black = "22.3.0"
pytest = "^7.4.4"
pytest-cov = "^2.11.1"
pytest-mock = "^3.6.0"
pytest-django = "^4.2.0"
pytest-flask = "^1.2.0"
pytest-responsemock = "^1.0.1"
ipython = "^7.22.0"
pytest-env = "^1.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"