[tool.poetry]
name = "data"
version = "0.1.0"
description = "Data Service. Consumes data, transforms it and loads it onto a database."
authors = ["MyCryptoBot Contributors"]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
python-binance = "^1.0.19"
Django = "^4.2.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
gunicorn = "^21.2.0"
Flask = "^3.0.0"
dj-database-url = "^2.1.0"
redis = "^5.0.0"
Flask-Cors = "^4.0.0"
Flask-JWT-Extended = "^4.6.0"
APScheduler = "^3.10.4"
progressbar2 = "^4.2.0"
werkzeug = "^3.0.0"
stratestic = "^1.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
ipython = "^7.22.0"
pytest-responsemock = "^1.0.1"
pytest-django = "^4.2.0"
pytest-flask = "^1.2.0"
pytest-env = "^1.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
