[tool.poetry]
name = "order_execution"
version = "0.1.0"
description = "Order Execution Service. Handles connection to the exchanges API's and executes orders."
authors = ["MyCryptoBot Contributors"]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
python-binance = "^1.0.19"
python-dotenv = "^1.0.0"
Flask = "^3.0.0"
Django = "^4.2.0"
gunicorn = "^21.2.0"
dj-database-url = "^2.1.0"
requests = "^2.31.0"
redis = "^5.0.0"
Flask-Cors = "^4.0.0"
Flask-JWT-Extended = "^4.6.0"
APScheduler = "^3.10.4"
werkzeug = "^3.0.0"
stratestic = "^1.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^2.11.1"
pytest-mock = "^3.6.0"
pytest-django = "^4.2.0"
pytest-flask = "^1.2.0"
pytest-env = "^1.1.3"
ipython = "^7.22.0"
pandas = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
