[tool.poetry]
name = "model"
version = "0.1.0"
description = "Model Service. Handles the signal generation logic."
authors = ["MyCryptoBot Contributors"]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
python-dotenv = "^1.0.0"
pandas = "^2.1.0"
Flask = "^3.0.0"
werkzeug = "^3.0.0"
Django = "^4.2.0"
gunicorn = "^21.2.0"
rq = "^1.15.0"
redis = "^5.0.0"
dj-database-url = "^2.1.0"
requests = "^2.31.0"
python-binance = "^1.0.19"
Flask-JWT-Extended = "^4.6.0"
urllib3 = "^2.0.0"
stratestic = "^1.0.0"
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
pytest-django = "^4.2.0"
pytest-flask = "^1.2.0"
pytest-env = "^1.1.3"
ipython = "^7.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
